--- a/style.css
+++ b/style.css
@@ -1,256 +1,174 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+
+
+*{
+    margin: 0 ;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins' , sans-serif;
+}
+
 body{
-    background-color: #f4f7f6;
-    margin-top:20px;
+    background-image: url("bg.jpg");
 }
-.card {
-    background: #fff;
-    transition: .5s;
-    border: 0;
-    margin-bottom: 30px;
-    border-radius: .55rem;
-    position: relative;
+
+a{
+    text-decoration: none;
+    color: #CEDFD9;
+}
+
+a:hover{
+    text-decoration: underline;
+}
+
+.main-container{
     width: 100%;
-    box-shadow: 0 1px 2px 0 rgb(0 0 0 / 10%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
 }
-.chat-app .people-list {
-    width: 280px;
+
+.login-container{
+    position: relative;
+    width: 450px;
+    border: 2px solid #EBFCFB;
+    backdrop-filter: blur(25px);
+    border-radius: 15px;
+    padding: 7.5em 2.5em 4em 2.5em;
+    color: #CEDFD9;
+    box-shadow: 0px 0px 10px 2px rgba(0, 0 , 0, 0.3);
+}
+
+.login-header{
     position: absolute;
-    left: 0;
     top: 0;
-    padding: 20px;
-    z-index: 7
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #EBFCFB;
+    border-radius: 0 0 20px 20px;
+    width: 140px;
+    height: 70px;
 }
 
-.chat-app .chat {
-    margin-left: 280px;
-    border-left: 1px solid #eaeaea
+.login-header span{
+    font-size: 30px;
+    color: black;
 }
 
-.people-list {
-    -moz-transition: .5s;
-    -o-transition: .5s;
-    -webkit-transition: .5s;
-    transition: .5s
+.login-header::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -30px;
+    width: 30px;
+    height: 30px;
+    border-top-right-radius: 50%;
+    background: transparent;
+    box-shadow: 15px 0 0 0 #EBFCFB;
 }
 
-.people-list .chat-list li {
-    padding: 10px 15px;
-    list-style: none;
-    border-radius: 3px
+.login-header::after{
+    content: "";
+    position: absolute;
+    top: 0;
+    right: -30px;
+    width: 30px;
+    height: 30px;
+    border-top-left-radius: 50%;
+    background: transparent;
+    box-shadow: -15px 0 0 0 #EBFCFB;
 }
 
-.people-list .chat-list li:hover {
-    background: #efefef;
-    cursor: pointer
+.input-box{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    margin: 20px 0;
 }
 
-.people-list .chat-list li.active {
-    background: #efefef
-}
-
-.people-list .chat-list li .name {
-    font-size: 15px
-}
-
-.people-list .chat-list img {
-    width: 45px;
-    border-radius: 50%
-}
-
-.people-list img {
-    float: left;
-    border-radius: 50%
-}
-
-.people-list .about {
-    float: left;
-    padding-left: 8px
-}
-
-.people-list .status {
-    color: #999;
-    font-size: 13px
-}
-
-.chat .chat-header {
-    padding: 15px 20px;
-    border-bottom: 2px solid #f4f7f6
-}
-
-.chat .chat-header img {
-    float: left;
-    border-radius: 40px;
-    width: 40px
-}
-
-.chat .chat-header .chat-about {
-    float: left;
-    padding-left: 10px
-}
-
-.chat .chat-history {
-    padding: 20px;
-    border-bottom: 2px solid #fff
-}
-
-.chat .chat-history ul {
-    padding: 0
-}
-
-.chat .chat-history ul li {
-    list-style: none;
-    margin-bottom: 30px
-}
-
-.chat .chat-history ul li:last-child {
-    margin-bottom: 0px
-}
-
-.chat .chat-history .message-data {
-    margin-bottom: 15px
-}
-
-.chat .chat-history .message-data img {
-    border-radius: 40px;
-    width: 40px
-}
-
-.chat .chat-history .message-data-time {
-    color: #434651;
-    padding-left: 6px
-}
-
-.chat .chat-history .message {
-    color: #444;
-    padding: 18px 20px;
-    line-height: 26px;
+.input-field{
+    width: 100%;
+    height: 55px;
     font-size: 16px;
-    border-radius: 7px;
-    display: inline-block;
-    position: relative
+    background: transparent;
+    color: #CEDFD9;
+    padding-inline: 20px 50px;
+    border: 2px solid #EBFCFB;
+    border-radius: 30px;
+    outline: none;
 }
 
-.chat .chat-history .message:after {
-    bottom: 100%;
-    left: 7%;
-    border: solid transparent;
-    content: " ";
-    height: 0;
-    width: 0;
+#user{
+    margin-bottom: 10px;
+}
+
+.label{
     position: absolute;
-    pointer-events: none;
-    border-bottom-color: #fff;
-    border-width: 10px;
-    margin-left: -10px
+    top: 15px;
+    left: 20px;
+    transition: .2s;
 }
 
-.chat .chat-history .my-message {
-    background: #efefef
-}
-
-.chat .chat-history .my-message:after {
-    bottom: 100%;
-    left: 30px;
-    border: solid transparent;
-    content: " ";
-    height: 0;
-    width: 0;
+.input-field:focus ~ .label,
+.input-field:valid ~ .label{
     position: absolute;
-    pointer-events: none;
-    border-bottom-color: #efefef;
-    border-width: 10px;
-    margin-left: -10px
+    top: -10px;
+    left: 20px;
+    font-size: 14px;
+    background-color: #5F5449;
+    border-radius: 30px;
+    color: #CEDFD9;
+    padding: 0 10px;
 }
 
-.chat .chat-history .other-message {
-    background: #e8f1f3;
-    text-align: right
+.icon{
+    position: absolute;
+    top: 18px;
+    right: 25px;
+    font-size: 20px;
 }
 
-.chat .chat-history .other-message:after {
-    border-bottom-color: #e8f1f3;
-    left: 93%
+.remember-forgot{
+    display: flex;
+    justify-content: space-between;
+    font-size: 15px;
 }
 
-.chat .chat-message {
-    padding: 20px
+.input-submit{
+    width: 100%;
+    height: 50px;
+    background: #5F5449;
+    font-size: 16px;
+    font-weight: 500;
+    border: none;
+    border-radius: 30px;
+    cursor: pointer;
+    transition: .3s;
 }
 
-.online,
-.offline,
-.me {
-    margin-right: 2px;
-    font-size: 8px;
-    vertical-align: middle
+.input-submit:hover{
+    background: #CEDFD9;
 }
 
-.online {
-    color: #86c541
+.register{
+    text-align: center;
 }
 
-.offline {
-    color: #e47297
+.register a{
+    font-weight: 500;
 }
 
-.me {
-    color: #1d8ecd
-}
-
-.float-right {
-    float: right
-}
-
-.clearfix:after {
-    visibility: hidden;
-    display: block;
-    font-size: 0;
-    content: " ";
-    clear: both;
-    height: 0
-}
-
-@media only screen and (max-width: 767px) {
-    .chat-app .people-list {
-        height: 465px;
-        width: 100%;
-        overflow-x: auto;
-        background: #fff;
-        left: -400px;
-        display: none
+@media only screen and (max-width: 564px) {
+    .main-container{
+        padding: 20px;
     }
-    .chat-app .people-list.open {
-        left: 0
-    }
-    .chat-app .chat {
-        margin: 0
-    }
-    .chat-app .chat .chat-header {
-        border-radius: 0.55rem 0.55rem 0 0
-    }
-    .chat-app .chat-history {
-        height: 300px;
-        overflow-x: auto
-    }
-}
-
-@media only screen and (min-width: 768px) and (max-width: 992px) {
-    .chat-app .chat-list {
-        height: 650px;
-        overflow-x: auto
-    }
-    .chat-app .chat-history {
-        height: 600px;
-        overflow-x: auto
-    }
-}
-
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1) {
-    .chat-app .chat-list {
-        height: 480px;
-        overflow-x: auto
-    }
-    .chat-app .chat-history {
-        height: calc(100vh - 350px);
-        overflow-x: auto
+    
+    .login-container{
+        padding: 7.5em 1.5em 4em 1.5em;
     }
 }
